Revise README with project details and setup instructions
Updated project description and instructions in README.